# hypervisor

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  bench.sh  irq.md  mk_shipped.sh  runcjag  runcmake.sh
.githooks/: pre-commit
bfack/: CMakeLists.txt
bfack/src/: CMakeLists.txt
bfdriver/efi/: CMakeLists.txt
bfdriver/efi/src/efi_main/: CMakeLists.txt  boot.c  efi_main.c
bfdriver/src/: common.c
bfdriver/src/platform/efi/: CMakeLists.txt  efi.patch  entry.c  platform.c
bfdriver/src/platform/efi/efi_base/: base.c  platform.c
bfdriver/src/platform/efi/efi_includeos/: includeos.c  includeos.h
bfdriver/src/platform/efi/efi_main/: CMakeLists.txt  boot.c  boot.h
bfdriver/src/platform/efi/src/: bfloader.c  (+3 more)
bfdriver/src/platform/linux/: Makefile  entry.c  platform.c
bfdriver/tests/: CMakeLists.txt
bfdrivers/include/: platform.h
bfdrivers/src/: common.c
bfdrivers/src/arch/linux/: platform.c
bfdrivers/src/arch/test/: platform.c
bfdummy/include/: dummy_libs.h
bfdummy/src/: CMakeLists.txt
bfdummy/src/libs/: CMakeLists.txt
bfdummy/src/main/: CMakeLists.txt  dummy_main.cpp
bfelf_loader/: CMakeLists.txt
bfelf_loader/include/: bfelf_loader.h
bfelf_loader/tests/: CMakeLists.txt
bfintrinsics/: CMakeLists.txt
bfintrinsics/include/: intrinsics.h
bfintrinsics/include/acpi/: acpi.h
bfintrinsics/include/arch/intel_x64/: cpuid.h  crs.h  fence.h  iommu.h  msrs.h  mtrr.h  time.h
bfintrinsics/include/arch/x64/: portio.h
bfintrinsics/src/: CMakeLists.txt
bfintrinsics/src/arch/intel_x64/: crs.asm
bfintrinsics/src/arch/intel_x64/apic/: lapic.cpp  xapic.asm
bfintrinsics/tests/: CMakeLists.txt
bfintrinsics/tests/acpi/: test_acpi.cpp
bfintrinsics/tests/arch/intel_x64/: test_cpuid.cpp
bfm/src/: CMakeLists.txt
bfm/tests/: CMakeLists.txt
bfroot/: CMakeLists.txt
bfruntime/: CMakeLists.txt
bfruntime/src/crt/: CMakeLists.txt
bfruntime/src/dso/: CMakeLists.txt
bfruntime/src/pthread/: CMakeLists.txt
bfruntime/src/syscall/: CMakeLists.txt
bfruntime/tests/: CMakeLists.txt
bfsdk/: CMakeLists.txt
bfsdk/include/: bfconstants.h  bfdelegate.h  bfplatform.h  bfstring.h  bfsupport.h
bfsdk/tests/: CMakeLists.txt  test_delegate.cpp
bfunwind/: CMakeLists.txt
bfunwind/src/: CMakeLists.txt
bfutil/: CMakeLists.txt
bfutil/tests/: CMakeLists.txt  test_real_elf.cpp
bfvmm/: CMakeLists.txt
bfvmm/include/: pci.h
bfvmm/include/debug/serial/: serial_ns16550a.h
bfvmm/include/exit_handler/: exit_handler_intel_x64.h
bfvmm/include/intrinsics/: msrs_intel_x64.h  vmx_intel_x64.h
bfvmm/include/intrinsics/x86/: intel_x64.h
bfvmm/include/memory_manager/: memory_manager_x64.h
bfvmm/include/vmcs/: vmcs_intel_x64.h  vmcs_intel_x64_helpers.h  vmcs_intel_x64_promote.h
bfvmm/integration/: CMakeLists.txt
bfvmm/integration/arch/intel_x64/: CMakeLists.txt
bfvmm/src/: CMakeLists.txt
bfvmm/src/debug/: CMakeLists.txt  unistd.cpp
bfvmm/src/entry/: CMakeLists.txt  entry.cpp
bfvmm/src/entry/src/: entry.cpp
bfvmm/src/exit_handler/arch/intel_x64/: exit_handler_intel_x64.cpp
bfvmm/src/exit_handler/src/: exit_handler_intel_x64.cpp
bfvmm/src/hve/: CMakeLists.txt
bfvmm/src/hve/arch/intel_x64/: exception.cpp  exit_handler.cpp  exit_handler_entry.asm  nmi.cpp  vcpu.cpp  vmcs_launch.asm  vmcs_resume.asm
bfvmm/src/hve/arch/intel_x64/check/: check_vmcs_guest_fields.cpp  check_vmcs_host_fields.cpp
bfvmm/src/hve/arch/intel_x64/event/: exception.cpp
bfvmm/src/hve/arch/intel_x64/exit_handler/: exit_handler.cpp
bfvmm/src/hve/arch/intel_x64/vmcs/: vmcs.cpp  vmcs_promote.asm
bfvmm/src/hve/arch/intel_x64/vmexit/: interrupt_window.cpp
bfvmm/src/hve/arch/intel_x64/vmx/: vmx.cpp
bfvmm/src/intrinsics/src/: CMakeLists.txt  thread_context_x64.asm
bfvmm/src/intrinsics/tests/: CMakeLists.txt  test_apic_intel_x64_x2apic.cpp  test_apic_intel_x64_xapic.cpp
bfvmm/src/main/: CMakeLists.txt
bfvmm/src/main/arch/intel_x64/: vcpu_factory.cpp
bfvmm/src/memory_manager/: CMakeLists.txt
bfvmm/src/memory_manager/src/: map_ptr_x64.cpp  memory_manager_x64.cpp
bfvmm/src/vcpu/: CMakeLists.txt  vcpu.cpp  vcpu_manager.cpp
bfvmm/src/vcpu/arch/intel_x64/: vcpu.cpp  vcpu_factory.cpp  vcpu_intel_x64.cpp
bfvmm/src/vcpu/src/: vcpu_intel_x64.cpp
bfvmm/src/vmcs/src/: vmcs_intel_x64.cpp  vmcs_intel_x64_promote.asm
bfvmm/src/vmcs/test/: test_vmcs_intel_x64.cpp
bfvmm/src/vmxon/src/: Makefile.bf  vmxon_intel_x64.cpp
bfvmm/test/intrinsics/: test_apic_intel_x64_x2apic.cpp  test_apic_intel_x64_xapic.cpp
bfvmm/tests/: CMakeLists.txt
bfvmm/tests/debug/: CMakeLists.txt
bfvmm/tests/hve/: CMakeLists.txt
bfvmm/tests/memory_manager/: CMakeLists.txt
bfvmm/tests/vcpu/: CMakeLists.txt  test_vcpu.cpp  test_vcpu_factory.cpp  test_vcpu_manager.cpp
docs/: cmake.md  cmake.txt
include/: constants.h
include/bfvmm/vcpu/: vcpu_factory.h  vcpu_manager.h
loader/include/x64/: loader_check_canonical.h  loader_check_page_aligned.h  loader_check_valid_physical.h
loader/include/x64/amd/: loader_arch_context.h
loader/include/x64/intel/: loader_arch.h  loader_arch_context.h  loader_gdt.h  loader_state_save.h
loader/linux/: .clang-format  Makefile
loader/linux/include/: loader_debug.h  loader_interface.h  loader_types.h
loader/linux/src/: entry.c  platform.c
loader/linux/src/x64/: arch_readldtr.S  arch_readtr.S  arch_rflags.S  arch_writecr0.S  arch_writecr4.S
loader/src/x64/amd/: arch_start_vmm_per_cpu.c
loader/src/x64/intel/: arch_check_hve_support.c  arch_start_vmm_per_cpu.c  arch_stop_vmm_per_cpu.c  vmexit.c  vmx_util.h
scripts/cmake/: CMakeLists.txt  macros.cmake  project.cmake  targets.cmake  validate.cmake
scripts/cmake/config/: default.cmake  example_config.cmake
scripts/cmake/depends/: binutils.cmake  gnuefi.cmake  libcxxabi.cmake  newlib.cmake  xue.cmake
scripts/cmake/flags/: efi_flags.cmake  test_flags.cmake  vmm_flags.cmake
scripts/cmake/toolchain/: clang_x86_64_efi.cmake  clang_x86_64_vmm.cmake
scripts/docs/: build_instructions.md
scripts/util/: chk_perms.sh  compdb_merge.sh  efi_build.sh
tools/scripts/: setup_archlinux.sh
(+63 files in other folders)
